set svn:keywords

--- a/ctex-faq.tex
+++ b/ctex-faq.tex
@@ -25,15 +25,15 @@
 %%
 %% Maintainers: Œ‚¡Ë‘∆ (aloft@ctex.org)
 %%
-%% $Id: ctex-faq.tex,v 1.27 2006/11/23 08:59:29 aloft Exp $
+%% $Id$
 %%
 \def\faqversion{0.4}
 
 \documentclass{article}
 \usepackage{ctex-faq}[2004/05/02]
 
- \RCS $Revision: 1.27 $
- \RCS $Date: 2006/11/23 08:59:29 $
+ \RCS $Revision$
+ \RCS $Date$
  \RCS $State: Exp $
 
  \topmargin -0.5 true cm
