--- a/ctex-faq.tex
+++ b/ctex-faq.tex
@@ -1,4 +1,4 @@
-%% Copyright (c)2003-2006 CTeX and all the Contributors to CTeX FAQ.
+%% Copyright (c)2003-2007 CTeX and all the Contributors to CTeX FAQ.
 %% All rights reserved.
 %%
 %% CTeX 以及 CTeX FAQ 的作者拥有版权 (c)2003。保留所有权利。
@@ -28,13 +28,13 @@
 %% $Id$
 %%
 \def\faqversion{0.4}
+\def\betaversion{ beta}
 
 \documentclass{article}
-\usepackage{ctex-faq}[2004/05/02]
+\usepackage{ctex-faq}[2007/01/30]
 
  \RCS $Revision$
  \RCS $Date$
- \RCS $State: Exp $
 
  \topmargin -0.5 true cm
  \oddsidemargin 0 true cm
