Fix compatibility with Hg keyword Date

--- a/ctex-faq.sty
+++ b/ctex-faq.sty
@@ -4,8 +4,6 @@
 %%
 %% Version 0.7 (30-Jan-2007)
 %%
-%% $Id$
-%%
 \def\filedate{2007/01/30}
 \def\fileversion{0.7}
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
@@ -145,7 +143,7 @@
   \else%
     \expandafter\RCS@setDate\RCS@value\@nil%
   \fi}
-\def\RCS@setDate#1-#2-#3 #4\@nil{%
+\def\RCS@setDate#1/#2/#3 #4\@nil{%
   \def\RCSday{#3}%
   \def\RCSmonth{#2}%
   \def\RCSyear{#1}%
